--- a/dtag-web/package.json
+++ b/dtag-web/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.2.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "ethers": "^5.6.9",
     "framer-motion": "^6",
     "next": "12.2.2",
     "react": "18.2.0",
